--- a/project_charter.tex
+++ b/project_charter.tex
@@ -26,14 +26,14 @@
 
 %%% Definitions
 \definecolor{accentcolor}{rgb}{0.0,0.0,0.5} 
-\newcommand{\teamname}{Team Name}
-\newcommand{\productname}{Product Name}
+\newcommand{\teamname}{SegFault}
+\newcommand{\productname}{Laser Harp}
 \newcommand{\coursename}{CSE 4316: Senior Design I}
-\newcommand{\semester}{Fall 2021}
+\newcommand{\semester}{Summer 2024}
 \newcommand{\docname}{Project Charter}
 \newcommand{\department}{Department of Computer Science \& Engineering}
 \newcommand{\university}{The University of Texas at Arlington}
-\newcommand{\authors}{Alan Turing \\ Grace Hopper \\ John Von Neumann \\ Ada Lovelace \\ Charles Babbage}
+\newcommand{\authors}{Simon Aguirre \\ Matthew Moran \\ Thomas Pinkney \\ Alex Tran}
 
 %%% Headers and footers
 \usepackage{fancyhdr}
@@ -84,11 +84,7 @@
 
 %%% Revision History
 \begin{versionhistory}
-  	\vhEntry{0.1}{10.01.2021}{GH}{document creation}
-  	\vhEntry{0.2}{10.05.2021}{AT|GH}{complete draft}
-  	\vhEntry{0.3}{10.12.2021}{AT|GH}{release candidate 1}
-  	\vhEntry{1.0}{10.20.2021}{AT|GH|CB}{official release}
-  	\vhEntry{1.1}{10.31.2021}{AL}{added customer change requests}
+  	\vhEntry{0.1}{6.28.2024}{SA||MM||TP||AT}{draft one}
 \end{versionhistory}
 \newpage
 
