--- a/project_charter.tex
+++ b/project_charter.tex
@@ -26,14 +26,14 @@
 
 %%% Definitions
 \definecolor{accentcolor}{rgb}{0.0,0.0,0.5} 
-\newcommand{\teamname}{Team Name}
-\newcommand{\productname}{Product Name}
+\newcommand{\teamname}{Seg Fault}
+\newcommand{\productname}{Laser Harp}
 \newcommand{\coursename}{CSE 4316: Senior Design I}
-\newcommand{\semester}{Fall 2021}
+\newcommand{\semester}{Summer 2024}
 \newcommand{\docname}{Project Charter}
 \newcommand{\department}{Department of Computer Science \& Engineering}
 \newcommand{\university}{The University of Texas at Arlington}
-\newcommand{\authors}{Alan Turing \\ Grace Hopper \\ John Von Neumann \\ Ada Lovelace \\ Charles Babbage}
+\newcommand{\authors}{Alex Tran \\ Simon Aguirre \\ Matthew Moran \\ Thomas Pinkney}
 
 %%% Headers and footers
 \usepackage{fancyhdr}
