Cost proposal finished

--- a/Charter/tex/cost_proposal.tex
+++ b/Charter/tex/cost_proposal.tex
@@ -1,7 +1,48 @@
-This section contains the approximate budget for the project, where that money will come from, and any other support. This text should be replaced with a discussion and justification of major expenses, but not the actual monetary amounts (that will go in the preliminary budget section below). 
+The costs associated with this project may vary depending on the inclusion of additional conceptual features. However, the primary expenses are attributed to acquiring the Raspberry Pi 5 and upgrading the lasers. All expenditures for this project align with essential requirements. Phototransistors and lasers are pivotal components necessary for the project's functionality, while hardware such as dials and speakers are also required unless an optional extension is developed. regardless the Raspberry pi is the largest sum needed along side lasers which can be upgraded with an additional funding, regardless the lasers currently on order provide enough power for the current project. making every piece of technology purchased a justifiable purchase.
 
 \subsection{Preliminary Budget}
-Include a high level budget table for components, fabrication, software licensees, development hardware, etc. This should be in a tabular format broken up into appropriate line items. 
+
+
+\begin{table}[H]
+\centering  % Center the table
+\begin{tabular}{|l|l|l|l|}
+\hline
+\textbf{Item} & \textbf{Amount} & \textbf{Amount per item (\$)} & \textbf{Cost (\$)} \\ \hline
+Raspberry Pi 5 & 1 & 80.00 & 80.00 \\ \hline
+Phototransistors & 10 & 2.30 & 23.00 \\ \hline
+Lasers 650nm Red & 10 & 1.42 & 14.20 \\ \hline
+USB Touchscreen & 1 & 40.00 & 40.00 \\ \hline
+Hardware Dials & 1 & 8.00 & 8.00 \\ \hline
+Speakers 8Ohm & 1 & 6.00 & 6.00 \\ \hline
+\end{tabular}
+\caption{Overall breakdown of costs for each component}
+\end{table}
+
+
 
 \subsection{Current \& Pending Support}
-What are all of the funding sources for the project, and are there any potential funding sources that haven't been secured yet? List all funding sources (including the default funding amount provided by the CSE department) and their dollar amounts.
+Only current support for the project :
+
+    
+
+
+\begin{table}[H]
+\centering  % Center the table
+\begin{tabular}{|l|l|l|l|}
+\hline
+\textbf{Sponsor} &  \textbf{Amount (\$)}  \\ \hline
+University of Texas at Arlington & 800.00\\ \hline
+
+\end{tabular}
+\caption{Sponsor breakdown}
+\end{table}                                                                                
+                                                    .
+
+
+
+
+
+
+
+
+
