finished Role Responsabilites

--- a/Charter/tex/roles_responsibilities.tex
+++ b/Charter/tex/roles_responsibilities.tex
@@ -1,1 +1,16 @@
-Who are the stakeholders of the project? Who will be the point of contact from the sponsor or customer side? Who are the team members, and what will be their areas of responsibility? Will your team maintain the product owner and scrum master for the whole project, or will that role change periodically? This section should occupy 1/2 - 1 full page.
+The stake holder for this project is the university of Texas at Arlington in which they contribute funding to our product and are the customers. The point of contact will be within the sponser side in which we will contact UTA through Prof. Gieser in order to get feedback or any feature request for this project. The product owner and scram master role will rotate from member to member based on each different sprint and whether or not we are need of a scram master who strength is in software or hardware
+
+\textbf{Simon Aguirre:} \\
+Simon, a proficient computer engineer specializing in embedded systems, will lead the design effort and collaborate closely with fellow engineers to develop an efficient circuit essential for the project's operation. Leveraging his expertise in low-level programming, Simon will assist Matthew Moran and other team members in developing a functional application tailored for the Raspberry Pi platform.
+
+\textbf{Matthew Moran:} \\
+Matthew Moran, a seasoned computer scientist proficient in circuit analysis, will play a crucial role in supporting fellow engineers with circuit design and analysis. Serving as the primary liaison for sponsors and stakeholders, Matthew will also oversee project communications. His extensive proficiency in multiple programming languages will enable him to develop the high-level program necessary for seamless collaboration between the electrical circuits and low-level languages such as C.
+
+\textbf{Thomas Pinkney:} \\
+Thomas Pinkney, an experienced embedded engineer, will collaborate closely with Simon and Alex Tran on circuit analysis. With a strong background in embedded C programming, Thomas will contribute his expertise to facilitate the emulation of Raspberry Pi functionalities in low-level languages. His extensive experience in researching various topics and circuit components will be instrumental in organizing the project and conducting thorough research to support team objectives.
+
+\textbf{Alex Tran:} \\
+Alex Tran rounds out the project team with expertise gained from completing Embedded Systems 2. His role will focus on overseeing higher-level circuits, particularly those involving dial circuits and advanced features requiring extensive knowledge of transistor logic and microcontrollers. Additionally, Alex will contribute to aspects of mechatronics and Internet of Things applications within the project scope. His specialized skills in embedded systems will be pivotal in ensuring comprehensive coverage across all technical requirements.
+
+
+
