Added the logo and first burndown chart

--- a/Charter/tex/documentation_reporting.tex
+++ b/Charter/tex/documentation_reporting.tex
@@ -38,7 +38,7 @@ Who will be responsible for generating the burn down charts for each sprint? How
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.5\textwidth]{images/test_image}
+    \includegraphics[width=0.5\textwidth]{images/burndown1.png}
     \caption{Example sprint burn down chart}
 \end{figure}
 
