--- a/Charter/project_charter.tex
+++ b/Charter/project_charter.tex
@@ -69,11 +69,11 @@
 \vspace{0.5 in}
 \begin{figure}[h!]
 	\centering
-   	\includegraphics[width=0.60\textwidth]{images/Logo.png}
+   	\includegraphics[width=0.50\textwidth]{images/Logo.png}
 \end{figure}
-\vspace{0.5 in}
+\vspace{0.4 in}
 {\centering \huge \color{accentcolor} \sc \textbf{\teamname \\ \productname} \par}
-\vspace{0.5 in}
+\vspace{0.25 in}
 {\centering \large \sc \textbf{\authors} \par}
 \newpage
 
@@ -137,4 +137,5 @@
 \bibliographystyle{reference/IEEEtran_custom}
 \bibliography{reference/refs}{}
 
+\label{LastPage}
 \end{document}
