--- a/Charter/tex/background.tex
+++ b/Charter/tex/background.tex
@@ -1,1 +1,13 @@
-An in-depth explanation of the problem, including the "business case". What is wrong with the status-quo or what opportunity exists that justifies undertaking this project (expanding upon the problem statement)? If you have a clear customer or sponsor, why do they want you to work on this? What is the existing relationship, if any, between the development team and the customer? This section should occupy 1/2 - 1 full page.
+In the current educational landscape, there is a growing need to inspire and engage students in Science, Technology, Engineering, and Mathematics (STEM) fields. Despite various initiatives, many students, particularly at the middle and high school levels, remain unaware of the practical and exciting applications of STEM education. This lack of engagement and awareness often results in a diminished interest in pursuing STEM careers, which are critical for the future workforce and technological advancements.
+
+Our senior design project addresses this issue by developing an interactive and engaging solution aimed at sparking interest in STEM among students. The university has identified this project as an opportunity to showcase innovative and practical applications of STEM, thereby encouraging more students to consider careers in these fields.
+
+Currently, STEM education in many schools relies heavily on traditional teaching methods, which may not effectively capture the interest of all students. Standardized curricula often lack the hands-on, real-world applications that can make STEM subjects exciting and relevant. Furthermore, there is a shortage of interactive tools and resources that teachers can use to demonstrate the impact and potential of STEM disciplines.
+
+This project provides a unique opportunity to bridge this gap by developing a solution that combines interactive learning with real-world applications. By leveraging modern technology and innovative teaching methods, we can create a platform that not only educates but also inspires students. This project will serve as a demonstration of how engaging and accessible STEM education can be, potentially leading to increased interest and enrollment in STEM programs.
+
+The primary sponsor of this project is the University of Texas at Arlington (UTA), which aims to use this project as a showcase to promote STEM education at local schools. UTA’s motivation for sponsoring this project stems from its commitment to enhancing STEM education and encouraging more students to pursue careers in these critical fields. By demonstrating the exciting possibilities within STEM, UTA hopes to foster a new generation of engineers, scientists, and technologists.
+
+Our development team, composed of three computer engineering majors and one software engineering major, has a direct relationship with UTA as our educational institution and project sponsor. This relationship is based on mutual goals: the university's commitment to advancing STEM education and our team’s dedication to creating a project that aligns with these goals. Through regular meetings and feedback sessions, we ensure that our project meets the expectations and requirements set forth by UTA. Additionally, the university provides us with resources, guidance, and support, enhancing our ability to deliver a high-quality and impactful project.
+
+In summary, this project addresses a significant need within the educational system by developing an innovative solution to engage students in STEM. By showcasing this project in local schools, UTA aims to inspire students and highlight the exciting opportunities available in STEM fields. Our team is committed to creating a project that not only meets these goals but also sets a new standard for STEM education and engagement.
