Cleaned up the code and the essay

--- a/Charter/tex/cost_proposal.tex
+++ b/Charter/tex/cost_proposal.tex
@@ -1,7 +1,6 @@
-The costs associated with this project may vary depending on the inclusion of additional conceptual features. However, the primary expenses are attributed to acquiring the Raspberry Pi 5 and upgrading the lasers. All expenditures for this project align with essential requirements. Phototransistors and lasers are pivotal components necessary for the project's functionality, while hardware such as dials and speakers are also required unless an optional extension is developed. regardless the Raspberry pi is the largest sum needed along side lasers which can be upgraded with an additional funding, regardless the lasers currently on order provide enough power for the current project. making every piece of technology purchased a justifiable purchase.
+The cost needed with this project vary depending on the inclusion of additional features. However the main expenses are due to the raspberry pi 5 and upgrading the lasers. everything else needed for the project are essential to its completion those include photo transistors and lasers. Hardware such as dials and speakers are also required unless optional extension are developed, such as midi. regardless the pi and the lasers will be the largest portion of the budget besides the probability of buying filament for the 3d printer.
 
 \subsection{Preliminary Budget}
-
 
 \begin{table}[H]
 \centering  % Center the table
@@ -18,14 +17,10 @@ Speakers 8Ohm & 1 & 6.00 & 6.00 \\ \hline
 \caption{Overall breakdown of costs for each component}
 \end{table}
 
-
-
 \subsection{Current \& Pending Support}
 Only current support for the project :
 
     
-
-
 \begin{table}[H]
 \centering  % Center the table
 \begin{tabular}{|l|l|l|l|}
@@ -36,13 +31,3 @@ University of Texas at Arlington & 800.00\\ \hline
 \end{tabular}
 \caption{Sponsor breakdown}
 \end{table}                                                                                
-                                                    .
-
-
-
-
-
-
-
-
-
