re wrote role responsibilities

--- a/Charter/tex/roles_responsibilities.tex
+++ b/Charter/tex/roles_responsibilities.tex
@@ -1,16 +1,18 @@
 The stake holder for this project is the university of Texas at Arlington in which they contribute funding to our product and are the customers. The point of contact will be within the sponser side in which we will contact UTA through Prof. Gieser in order to get feedback or any feature request for this project. The product owner and scram master role will rotate from member to member based on each different sprint and whether or not we are need of a scram master who strength is in software or hardware
 
 \textbf{Simon Aguirre:} \\
-Simon, a proficient computer engineer specializing in embedded systems, will lead the design effort and collaborate closely with fellow engineers to develop an efficient circuit essential for the project's operation. Leveraging his expertise in low-level programming, Simon will assist Matthew Moran and other team members in developing a functional application tailored for the Raspberry Pi platform.
+Simon is a computer engineer specializing in embedded systems, he will lead the design effort and collaborate with other engineers within the projects group to design efficient circuits essential for the project. using his knowledge in low level programming Simon will assist Matthew Moran and other team members in developing a application tailored for the projects need on the Raspberry pi.
+
 
 \textbf{Matthew Moran:} \\
-Matthew Moran, a seasoned computer scientist proficient in circuit analysis, will play a crucial role in supporting fellow engineers with circuit design and analysis. Serving as the primary liaison for sponsors and stakeholders, Matthew will also oversee project communications. His extensive proficiency in multiple programming languages will enable him to develop the high-level program necessary for seamless collaboration between the electrical circuits and low-level languages such as C.
+Matthew Morean, is a computer scientist who has knowledge in circuit analysis, and will play a crucial role supporting the engineers within the group with his circuit analysis skills. Matthew is the primary contact point for the sponsors and stakeholders, as he will oversee project communications. His extensive knowledge in multiple programming language will help design and develop a high level program necessary for seamless collaboration between electrical circuits and low level languages such as C.
+
 
 \textbf{Thomas Pinkney:} \\
-Thomas Pinkney, an experienced embedded engineer, will collaborate closely with Simon and Alex Tran on circuit analysis. With a strong background in embedded C programming, Thomas will contribute his expertise to facilitate the emulation of Raspberry Pi functionalities in low-level languages. His extensive experience in researching various topics and circuit components will be instrumental in organizing the project and conducting thorough research to support team objectives.
+Thomas Pinkney is one of the 3 engineers collaborating on the project. He will be working on checking the circuits of any design and contribute to work on embedded C programming. Thomas has experience working on raspberry pi's functionalities and thus could be seen as the lead designer for the raspberry's pi's low level programming.Furthermore Thomas has a lot of experience researching many projects and will help the groups overall efficiency in research.
 
 \textbf{Alex Tran:} \\
-Alex Tran rounds out the project team with expertise gained from completing Embedded Systems 2. His role will focus on overseeing higher-level circuits, particularly those involving dial circuits and advanced features requiring extensive knowledge of transistor logic and microcontrollers. Additionally, Alex will contribute to aspects of mechatronics and Internet of Things applications within the project scope. His specialized skills in embedded systems will be pivotal in ensuring comprehensive coverage across all technical requirements.
+Alex Tran rounds out the project team with expertise gained from completing Embedded Systems 2. His role will focus on overlooking higher level circuits, this would include advanced knowledge in transistor logic. Alex will be contribute to the project with skills in internet of things applications and mechatronics, and is pivotal for knowledge which can be used across the entirety of the project
 
 
 
