Added Problem Statement

--- a/Charter/tex/problem.tex
+++ b/Charter/tex/problem.tex
@@ -1,1 +1,5 @@
-The problem statement defines the "Why" of the project. This is the higher purpose, or the reason for the project's existence. This section should avoid mentioning implementation details, and focus more on what the current problem is and what would be gained if the problem were to be solved. In short, the is the reason that you are going to be working on something, not the method(s) that you will be employing.
+The current educational landscape, particularly in middle and high schools, faces a significant challenge in engaging students in Science, Technology, Engineering, and Mathematics (STEM) fields. Traditional teaching methods often fail to capture students' interest, leading to a lack of awareness and enthusiasm for STEM subjects. This disengagement not only hampers students' immediate educational experiences but also impacts their long-term career choices, contributing to a shortage of skilled professionals in STEM industries.
+
+This project aims to address this critical issue by creating an interactive and engaging educational tool that demonstrates the practical applications of STEM concepts. The goal is to make STEM education more accessible, enjoyable, and inspiring for students. By providing a hands-on, real-world learning experience, this project seeks to ignite students' curiosity and passion for STEM, ultimately encouraging more students to pursue careers in these essential fields.
+
+Solving this problem has the potential to transform the way STEM subjects are perceived and taught in schools. It can bridge the gap between theoretical knowledge and practical application, making STEM education more relevant and exciting. This, in turn, will foster a new generation of students who are not only knowledgeable but also enthusiastic about contributing to advancements in science, technology, engineering, and mathematics. The successful implementation of this project could serve as a model for other educational institutions, leading to widespread improvements in STEM engagement and education nationwide.
