Spelling and Grammar

--- a/Charter/tex/roles_responsibilities.tex
+++ b/Charter/tex/roles_responsibilities.tex
@@ -1,11 +1,11 @@
 The stake holder for this project is the university of Texas at Arlington in which they contribute funding to our product and are the customers. The point of contact will be within the sponser side in which we will contact UTA through Prof. Gieser in order to get feedback or any feature request for this project. The product owner and scram master role will rotate from member to member based on each different sprint and whether or not we are need of a scram master who strength is in software or hardware
 
 \textbf{Simon Aguirre:} \\
-Simon is a computer engineer specializing in embedded systems, he will lead the design effort and collaborate with other engineers within the projects group to design efficient circuits essential for the project. using his knowledge in low level programming Simon will assist Matthew Moran and other team members in developing a application tailored for the projects need on the Raspberry pi.
+Simon Aguirre is a computer engineer specializing in embedded systems, he will lead the design effort and collaborate with other engineers within the projects group to design efficient circuits essential for the project. using his knowledge in low level programming Simon will assist Matthew Moran and other team members in developing a application tailored for the projects need on the Raspberry pi.
 
 
 \textbf{Matthew Moran:} \\
-Matthew Morean, is a computer scientist who has knowledge in circuit analysis, and will play a crucial role supporting the engineers within the group with his circuit analysis skills. Matthew is the primary contact point for the sponsors and stakeholders, as he will oversee project communications. His extensive knowledge in multiple programming language will help design and develop a high level program necessary for seamless collaboration between electrical circuits and low level languages such as C.
+Matthew Moran, is a computer scientist who has knowledge in circuit analysis, and will play a crucial role supporting the engineers within the group with his circuit analysis skills. Matthew is the primary contact point for the sponsors and stakeholders, as he will oversee project communications. His extensive knowledge in multiple programming language will help design and develop a high level program necessary for seamless collaboration between electrical circuits and low level languages such as C.
 
 
 \textbf{Thomas Pinkney:} \\
@@ -13,6 +13,3 @@ Thomas Pinkney is one of the 3 engineers collaborating on the project. He will b
 
 \textbf{Alex Tran:} \\
 Alex Tran rounds out the project team with expertise gained from completing Embedded Systems 2. His role will focus on overlooking higher level circuits, this would include advanced knowledge in transistor logic. Alex will be contribute to the project with skills in internet of things applications and mechatronics, and is pivotal for knowledge which can be used across the entirety of the project
-
-
-
