Added Methodology/Grammar Improvements

--- a/Charter/tex/methodology.tex
+++ b/Charter/tex/methodology.tex
@@ -1,1 +1,7 @@
-This is the "What" of the project and it states what will be done to address the problem statement. This section should focus mostly on what your solution is going to be and what it is going to do (i.e., we are going to build an app, robot, device, etc. to perform some task which mitigates the problem). If someone were to ask you \textit{"What are you doing for your senior design project?"}, this is section is basically what you would tell them.
+To address the problem of engaging students in STEM education, we are developing an interactive educational device that demonstrates the practical applications of STEM concepts in a fun and engaging way. Our solution involves creating a laser-based musical instrument, which we refer to as the "Laser Harp."
+
+The Laser Harp consists of a series of laser beams arranged vertically, each representing a different note or sound. At the top of the setup, corresponding phototransistors detect the presence of these laser beams. When a student interrupts a laser beam by blocking it with their hand or an object, the phototransistor detects the change and sends a signal to a central processing unit, such as a Raspberry Pi. This signal triggers the playback of a specific sound associated with the interrupted laser beam.
+
+By interacting with the Laser Harp, students will be able to see immediate cause-and-effect relationships between their actions and the system's response. This hands-on experience helps to demystify abstract STEM concepts and demonstrates how technology can be used in creative and practical ways.
+
+The primary goals of this project are to make STEM education more interactive and engaging, to inspire curiosity and enthusiasm in students, and to showcase the exciting possibilities within the fields of science, technology, engineering, and mathematics. By bringing this innovative device to local schools, we aim to spark students' interest in STEM and encourage them to explore these subjects further, potentially leading to increased participation in STEM programs and careers in the future.
