--- a/Charter/tex/milestones.tex
+++ b/Charter/tex/milestones.tex
@@ -1,18 +1,15 @@
-This list of core project milestones should include all major documents, demonstration of major project features, and associated deadlines. Any date that has not yet been officially scheduled at the time of preparing this document may be listed by month.
 \\
 \\
 Provide a list of milestones and completion dates in the following format:
 \begin{itemize}
-  \item Project Charter first draft - Month Year
-  \item System Requirements Specification - Month Year
-  \item Architectural Design Specification - Month Year
-  \item Demonstration of <feature or implementation milestone> - Month Year
-  \item Detailed Design Specification - Month Year
-  \item Demonstration of <feature or implementation milestone> - Month Year
-  \item Demonstration of <feature or implementation milestone> - Month Year
-  \item CoE Innovation Day poster presentation - Month Year
-  \item Demonstration of <feature or implementation milestone> - Month Year
-  \item Demonstration of <feature or implementation milestone> - Month Year
-  \item Demonstration of <feature or implementation milestone> - Month Year
-  \item Final Project Demonstration - Month Year
+  \item Project Charter first draft - June 2024
+  \item System Requirements Specification - July 2024
+  \item Architectural Design Specification - July 2024
+  \item Demonstration of playing sound by interrupting a laser - July 2024
+  \item Detailed Design Specification - August 2024
+  \item Demonstration of prototype working harp - August 2024
+  \item Demonstration of changing harp's notes- September 2024
+  \item Demonstration of working and portable productname - October 2024
+  \item Demonstration of potential GUI support- November 2024
+  \item Final Project Demonstration - November/December 2024
 \end{itemize}
