Some Adjustements to Fit Rubric Guidelines

--- a/Charter/tex/facilities_equipment.tex
+++ b/Charter/tex/facilities_equipment.tex
@@ -1,1 +1,11 @@
-Facilities and equipment needed for the successfully finish of the project are varied yet much needed. We would need a well equipped laboratory area that serves as the main area where the project will be put together, researched and tested. This space will be the main environment needed to work on the project and have collaborative work with others on the group. These facilities can be found all over UTA including the ERB, furthermore in terms of tools. We would need the essential tools including a soldering iron, good quality of solder and flux in order to create a secure connection and integrity of electronic assembling. Along side these tools a area to store our project and the components is needed, This will all be provided by UTA in the senior design area. More tools needed are the oscilloscope as it can provide a insight to the voltage of the circuit and necessary signal of the voltage. The oscilloscope can also help troubleshoot issues within the wiring by viewing these voltages. This equipment can be bought or borrowed from UTA and there corresponding labs. The last equipment needed is the 3d printer in order to create a frame and test different types of geometry for the frame. This equipment is borrow able within the lab area already provided or can be used in the maker space. In summary, all these facilities and equipment's form the backbone of the development of the project. these tools are assets that will help us achieve milestones efficiently and deliver a solution to the stakeholders and product owner
+Facilities and equipment needed for the successful completion of the project are varied yet essential. We would need a well-equipped laboratory area that serves as the main space where the project will be assembled, researched, and tested. This space will be the primary environment for collaborative work within the group. Such facilities are available throughout UTA, including the ERB, which provides an excellent setting for the technical and practical aspects of our work.
+
+In terms of tools, we would need essential items like a soldering iron, high-quality solder, and flux to ensure secure connections and the integrity of electronic assemblies. Alongside these tools, we require a designated area to store our project and its components. This storage and workspace will be provided by UTA in the senior design area. Moreover, access to specialized tools like a precision multimeter will be crucial for measuring and verifying electrical properties of our circuits, ensuring accuracy and reliability in our design.
+
+Additionally, an oscilloscope is necessary as it provides insights into the circuit's voltage and signal integrity, aiding in troubleshooting wiring issues by visualizing these voltages. This equipment can be borrowed or accessed from UTA's corresponding labs. Another crucial piece of equipment is a 3D printer, which will be used to create and test different geometries for the frame of our project. This printer is available in the lab area or can be utilized in the MakerSpace. The 3D printer will allow us to rapidly prototype and iterate on our design, ensuring optimal functionality and aesthetics.
+
+Furthermore, access to software tools for design and simulation will be important to ensure precise planning and testing before physical assembly. Software such as CAD for mechanical design, circuit simulation tools, and programming environments for the Raspberry Pi are essential to our project's success. These software tools are typically available through UTA's licenses or can be accessed in the computer labs.
+
+For testing and validation, we will need a controlled environment to simulate real-world conditions and ensure our device performs as expected. This might include an isolated area where we can control lighting and other environmental factors to accurately test the laser and phototransistor system. Additionally, having access to a soundproof room would be beneficial when testing the audio output of our project, ensuring that external noise does not interfere with our results.
+
+Finally, consistent access to mentors and experts in the fields of electronics, software engineering, and mechanical design will be invaluable. Regular consultations will help us navigate challenges and refine our project based on expert feedback.
