--- a/Charter/tex/documentation_reporting.tex
+++ b/Charter/tex/documentation_reporting.tex
@@ -1,85 +1,76 @@
 %%% In this section, you will describe all of the various artifacts that you will generate and maintain during the project life cycle. Describe the purpose of each item below, how the content will be generated, where it will be stored, how often it will be updated, etc. Replace the default text for each section with your own description. Reword this paragraph as appropriate.
 
 \subsection{Major Documentation Deliverables}
-These deliverables are major grade components of the course. Completing these documents should generally be the sprint goal during the applicable sprint period. Refer to current and previous course syllabi and schedules to estimate the due dates of these items. Remove this explanatory paragraph from your draft, but leave the heading.
+
 
 \subsubsection{Project Charter}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
+The Project Charter will have an initial version 1.0 available on 06/28/24. It will be updated monthly to reflect new design developments or changes in system requirements. Each updated version will be released at the end of the month, ensuring that the documentation stays current with the project's progress.
 
 \subsubsection{System Requirements Specification}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
+The System Requirements Specifications (SRS) will be updated after each prototype is completed, incorporating additional complexity into the project. The aim is to update the SRS every month to account for newly added features and enhancements. This iterative approach ensures that the system requirements evolve in tandem with the project's development, providing a comprehensive and up-to-date guide for the project team. The final version will be delivered with the final designs, the expected date will be 08/20/2024.
 
 \subsubsection{Architectural Design Specification}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
+The Architectural Design Specification (ADS), which will detail the form factor of the laser harp, has not yet been created. The first version of this document will be available on 07/29/24. It will be created and updated monthly based on the proof-of-concept designs and their iterations. This approach allows for the ADS to adapt and improve with each stage of the project, ensuring that the design specifications align with the evolving prototype. The final version will be available upon the final delivery of the product.
 
 \subsubsection{Detailed Design Specification}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
+The Detail Design Specification (DDS) will be the circuitry design along with how it fits within its form factor. It will be created and updated monthly based on the proof-of-concept designs and their iterations. This approach allows for the DDS to adapt and improve with each stage of the project, ensuring that the design specifications align with the evolving prototype. The final version will be available upon the final delivery of the product.
 
 \subsection{Recurring Sprint Items}
-The following items will be documented and maintained during each individual sprint. As above, remove this paragraph from your draft, but leave the heading.
+
 
 \subsubsection{Product Backlog}
-How will items be added to the product backlog from the SRS? How will these items be prioritized? Who makes the decision (product owner, group vote, etc.)? What software will be used to maintain and share the product backlog with team members and stakeholders?
+Items added to the product backlog are based on future needs to complete the project. These items are determined through group decisions and updated by Matthew. The product backlog will be maintained and updated using Google Docs, with notifications sent via Discord. 
 
 \subsubsection{Sprint Planning}
-How will each sprint plan be planned? How many sprints will there be (you need to look at the schedules for this course and previous Senior Design II courses during the appropriate semesters to figure this out).
+Each sprint will be planned during scheduled breaks. It is estimated that approximately 10 sprints will be needed to complete the project.
 
 \subsubsection{Sprint Goal}
-Who decides the sprint goal? How will you involve your customer in this process?
+The sprint goal will be determined through group decision, with the customer involved during the sprint planning stages. This ensures that the goals align with both the project objectives and the customer's expectations. 
 
 \subsubsection{Sprint Backlog}
-Who decides which product backlog items make their way into the sprint backlog? How will the backlog be maintained (collaboration software, a "scrum board", etc.)?
+The sprint backlog will be derived from the product backlog, focusing on the next steps needed to complete the project. It will be maintained using Google Workflow to ensure that tasks are organized and progress is tracked efficiently.
+
 
 \subsubsection{Task Breakdown}
-How will individual tasks be assigned from the sprint backlog? Will it be up to each team member to voluntarily claim a task, or will it come from the product owner? How will time spent on tasks be documented?
+Each individual task will be split based on what can be done without interference from another piece. Team members will voluntarily pick tasks, and any larger task will be handled by two team members to ensure effective collaboration and timely completion.
 
 \subsubsection{Sprint Burn Down Charts}
-Who will be responsible for generating the burn down charts for each sprint? How will they be able to access the total amount of effort expended by each individual team member? What format will the burn down chart use (include an example burn down chart below).
+The burn-down charts will be generated by the SCRUM master assigned to each sprint. The assessment will be based on the accomplishments of each individual team member and will be generated using Excel. These charts will help visualize the progress and remaining work for the sprint, ensuring that the team stays on track to meet its goals. 
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.5\textwidth]{images/Burndown1.png}
+    \includegraphics[width=0.5\textwidth]{images/test_image}
     \caption{Example sprint burn down chart}
 \end{figure}
 
 \subsubsection{Sprint Retrospective}
-How will the sprint retrospective be handled as a team? When will this discussion happen after each sprint? What will be documented as a group and as individuals, and when will it be due?
+The sprint retrospective will involve assessing each burn-down chart to evaluate what tasks were completed. These discussions will occur at the end of each sprint to ensure that all documentation is up to date. The documentation will be compiled into an individual sprint report, summarizing the progress and outcomes of the sprint.
 
 \subsubsection{Individual Status Reports}
-What sort of status will be reported by each individual member, and how often will it be reported? What key items will be contained in the report?
+Status updates from each individual team member will be provided every three days during each sprint. These updates will include the current task they are working on, the estimated time to completion, and any challenges they are facing. This regular reporting ensures transparency and helps the team address issues promptly.
 
-\subsubsection{Engineering Notebooks}
-How often will the engineering notebook be updated, at a minimum, by each team member? What is the minimum amount of pages that will be completed for each interval, and how long will that interval be? How will the team keep each member accountable? Who will sign of as a "witness" for each ENB page?
 
 \subsection{Closeout Materials}
-The following materials, in addition to major documentation deliverables, will be provided to the customer upon project closeout. Remove this paragraph from your draft, but leave the heading.
+
 
 \subsubsection{System Prototype}
-What will be included in the final system prototype? How and when will this be demonstrated? Will there be a Prototype Acceptance Test (PAT) with your customer? Will anything be demonstrated off-site? If so, will there be a Field Acceptance Test (FAT)?
-
+The final system prototype will include the finalized Architectural Design Specification (ADS), Detailed Design Specification (DDS), and System Requirements Specifications (SRS). Additionally, the source code will be made available in a GitHub repository. The project will culminate in a demonstration showcasing the use and sound of the laser harp as the final presentation.
 \subsubsection{Project Poster}
-What will be included on the poster, what will be the final dimensions, and when will it be delivered?
+The project poster will summarize the design parameters, and the purpose of the project, and provide a high-level overview of how the laser harp works. It will serve as a concise visual representation of the project's objectives and achievements.
 
 \subsubsection{Web Page}
-What will be included on the project web page? Will it be accessible to the public? When will this be delivered? Will it be updated throughout the project, or just provided at closeout (at a minimum, you need to provide a simple web page at the end).
+The webpage will feature a short demonstration video illustrating the operation of the laser harp. It will also include information on the components required to build this version of the project, providing visitors with a comprehensive overview of the implementation.
 
 \subsubsection{Demo Video}
-What will be shown in the demo video(s)? Will you include a B-reel footage for future video cuts? Approximately how long will the video(s) be, and what topics will be covered?
+The demo video will be 5-10 minutes long and will demonstrate how to turn on the laser harp, select different sounds, and play across different octaves. This video will serve as a detailed guide for users interested in understanding the functionality and operation of the laser harp prototype
 
 \subsubsection{Source Code}
-How will your source code be maintained? What version control system will you adopt? Will source code be provided to the customer, or binaries only? If source code is provided, how will it be turned over to the customer? Will the project be open sourced to the general public? If so, what are the license terms (GNU, GPL, MIT, etc.). Where will the license terms be listed (in each source file, in a single readme file, etc.).
-
+The source code will be maintained through GitHub to ensure that all code is updated and accessible to all parties involved. Upon completion of the project, the customer will receive all files, ensuring they have a complete and functional version of the project.
 \subsubsection{Source Code Documentation}
-What documentation standards will be employed? Will you use tools to generate the documentation (Doxygen, Javadocs, etc.). In what format will the final documentation be provided (PDF, browsable HTML, etc.)?
+Doxygen will be used to generate and keep the coding documentation up to date. This will ensure that the source code is well-documented and easily understandable for future developers and maintainers.
 
 \subsubsection{Hardware Schematics}
-Will you be creating printed circuit boards (PCBs) or wiring components together? If so, list each applicable schematic and what sort of data it will contain (PCB layout, wiring diagram, etc.). If your project is purely software, omit this section.
+Wiring and circuit diagrams will be provided to detail the electrical design of the laser harp. These schematics will be essential for understanding the hardware connections and for troubleshooting or replicating the project.
 
-\subsubsection{CAD files}
-Will the project involve any mechanical design, such as 3D printed or laser-cut parts? If so, what software will you use to generate the files and what file formats will you provide in your closeout materials (STL, STEP, OBJ, etc.). If your project is purely software, omit this section.
-
-\subsubsection{Installation Scripts}
-How will the customer deploy software to new installations? Will you provide installation scripts, install programs, or any other tools to improve the process? Will there be multiple scripts provided (perhaps separate scripts for the graphical front end and back end server software)? 
-
-\subsubsection{User Manual}
-Will you customer need a printed or digital user manual? Will they need a setup video? Decide now what will be provided and discuss.
+\subsubsection{CAD Files}
+All 3D printed parts and the final form factor will be provided in STL file format. These files will be included in the final project deliverables, allowing for easy reproduction and customization of the physical components.
