Added Requirements and Future Items

--- a/system requirements specification LaTeX/tex/future_items.tex
+++ b/system requirements specification LaTeX/tex/future_items.tex
@@ -1,13 +1,14 @@
-In this last section, you will reiterate all requirements that are listed as priority 5. This is repetitive, but necessary as a concise statement of features/functions that were considered/discussed and documented herein, but will NOT be addressed in the prototype version of the product due to constraints of budget, time, skills, technology, feasibility analysis, etc. Use the following format for this section.
-
-\subsection{Requirement Name}
+\subsection{Wireless Connectivity}
 \subsubsection{Description}
-Detailed requirement description...
+Future versions of the laser harp should include wireless connectivity options such as Bluetooth or Wi-Fi for remote control and updates.
 \subsubsection{Source}
-Source
+None
 \subsubsection{Constraints}
-Detailed description of applicable constraints...
+Economic: Ensure cost-effective implementation of wireless modules.
+Environmental: Reliable operation in typical indoor environments.
+Health & Safety: Adhere to wireless communication safety standards.
 \subsubsection{Standards}
-List of applicable standards
+IEEE 802.11 for Wi-Fi
+Bluetooth SIG standards for Bluetooth
 \subsubsection{Priority}
-Priority
+Future
